--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<link rel="stylesheet" href="index.css">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <div class="container" >
+<div class="container" >
+    <div>
         <h2 id="cer">Certificate Generator</h2>
-            <!-- <img id="
-            hii" src="Maulana Azad NAtional Institute of Technology Bhopal.png" alt=""> -->
+        <!-- <img id="
+        hii" src="Maulana Azad NAtional Institute of Technology Bhopal.png" alt=""> -->
 
-            <input type="text" id="name" placeholder="Enter Student name" required/>
-            <input type="text" id="course" placeholder="Enter course name" required/>
-            <button onclick="generateCertificate()">generate Certificate</button>
-            <button onclick="downloadCertificate()">Download PNG</button>
-            <button onclick="downloadCertificateinpdf()">Download PDF</button>
+        <input type="text" id="name" placeholder="Enter Student name" required/>
+        <input type="text" id="course" placeholder="Enter course name" required/>
+        <button onclick="generateCertificate()">generate Certificate</button>
+        <button onclick="downloadCertificate()">Download PNG</button>
+        <button onclick="downloadCertificateinpdf()">Download PDF</button>
+    </div>
+    <div class="certificate" id="certificate">
+        <h1>Certificate of Completion</h1>
+        <div>
+            <img src="Maulana Azad NAtional Institute of Technology Bhopal.png" alt="">
+            <h2 id="Institute">MAULANA AZAD NATIONAL INSTITUTE OF TECHNOLOGY</h2>
         </div>
-        <div class="certificate" id="certificate">
-            <h1>Certificate of Completion</h1>
-            <div>
-                <img src="Maulana Azad NAtional Institute of Technology Bhopal.png" alt="">
-                <h2 id="Institute">MAULANA AZAD NATIONAL INSTITIUTE OF TECHNOLOGY</h2>
+        <p>This is to Certify that</p>
+        <h2 id="cert-name">Your Name</h2>
+        <p>has successfully fulfilled all the prescribed requirements of the course entitled</p>
+        <h3 id="cert-course">Course Name</h3>
+        <p>conducted by Maulana Azad National Institute of Technology.
+        This certificate is hereby awarded in formal recognition of the successful completion of the course and the distinguished performance therein.
+        Given under the authority of the Institute.</p>
+        <div class="signature-section">
+            <div class="signature"> 
+                <div class="single-line"></div>
+                <p></p>
             </div>
-            <p>This is to Certify that </p>
-            <h2 id="cert-name">Your Name</h2>
-            <p>has succesfully complited</p>
-            <h3 id="cert-course">Course Name</h3>
-            <p>with dedication and outstanding performance.</p>
+            <div class="signature">
+                <div class="sign-line"></div>
+                <p></p> 
+            </div>
         </div>
     </div>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="index.js"></script>
+    
+</div>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
